--- a/styles/styles.css
+++ b/styles/styles.css
@@ -534,7 +534,7 @@ body
 body
     div
     div:has(
-        div:first-child > div:nth-child(2) label:nth-of-type(2) > input:checked
+        div:nth-child(3) > div:nth-child(2) label:last-of-type > input:checked
     ) {
     --super-mario: true;
 }
